--- a/utilities/src/main/resources/newFile.css
+++ b/utilities/src/main/resources/newFile.css
@@ -1,3 +1,3 @@
-#textarea .html-editor .web-view {
-    -fx-background-color: black;
-}
+.text-area .content{
+      -fx-background-color: black;
+  }
